--- a/_assets/_css/global.css
+++ b/_assets/_css/global.css
@@ -37,7 +37,13 @@ body {
     background-color: var(--fondo-claro);
     color: #333;
     line-height: 1.6;
+    padding-top: 90px;
 }
+
+.musica-container {
+  margin-top: 120px !important; /* Asegura que el contenido baje */
+}
+
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Jost', sans-serif;
