--- a/_assets/_css/navbar.css
+++ b/_assets/_css/navbar.css
@@ -64,8 +64,8 @@
 /* === ESTILOS DEL DROPDOWN EN PANTALLAS GRANDES === */
 .dropdown:hover .dropdown-menu {
   display: block;
- 
 }
+
 .global-navbar .dropdown-menu {
   z-index: 1200 !important; /* Asegura que los dropdowns se vean sobre el navbar secundario */
   position: absolute;
@@ -82,6 +82,11 @@
   display: none; /* Aseguramos que no aparezca automáticamente en móviles */
 
 }
+
+.dropdown-menu.show {
+  display: block;
+}
+
 
 .dropdown-menu .dropdown-item {
   padding: 10px 15px;
