--- a/_assets/_css/2025.css
+++ b/_assets/_css/2025.css
@@ -39,6 +39,8 @@
 /* Contador Regresivo */
 /* ------------------------------ */
 .countdown {
+  color: white;
+  font-weight: bold;
   display: flex;
   justify-content: center;
   gap: 20px;
